use IConfiguration to read AppSettings Conguration

--- a/AppSettingsManager/Views/Home/Index.cshtml
+++ b/AppSettingsManager/Views/Home/Index.cshtml
@@ -1,8 +1,24 @@
-﻿@{
+﻿@inject Microsoft.Extensions.Configuration.IConfiguration configuration
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">AppSettings</h1>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <p>SendGrid from controller</p>
+        <p>@ViewBag.SendGridKey</p>
+    </div>
+    <div class="col-6">
+        <p>Auth from controller</p>
+        <p>@ViewBag.SectretKey</p>
+        <p>@ViewBag.PublicKey</p>
+        <hr />
+        <p>Auth Injected</p>
+        <p>@configuration.GetSection("Auth:SectretKey").Value</p>
+        <p>@configuration.GetSection("Auth:PublicKey").Value</p>
+    </div>
 </div>
