Bind class to AppSettings section

--- a/AppSettingsManager/Views/Home/Index.cshtml
+++ b/AppSettingsManager/Views/Home/Index.cshtml
@@ -16,6 +16,7 @@
         <p>Auth from controller</p>
         <p>@ViewBag.SectretKey</p>
         <p>@ViewBag.PublicKey</p>
+        <p>@ViewBag.PhoneNumber</p>
         <hr />
         <p>Auth Injected</p>
         <p>@configuration.GetSection("Auth:SectretKey").Value</p>
