--- a/AppSettingsManager/Views/Home/Index.cshtml
+++ b/AppSettingsManager/Views/Home/Index.cshtml
@@ -28,3 +28,11 @@
         <p>@ViewBag.PhoneNumber</p>
     </div>
 </div>
+<hr />
+<hr />
+<div class="row">
+    <div class="col-6">
+        <p>@ViewBag.FacebookKey</p>
+        <p>@ViewBag.GoogleKey</p>
+    </div>
+</div>
