use GetConnectionString method

--- a/AppSettingsManager/Views/Home/Index.cshtml
+++ b/AppSettingsManager/Views/Home/Index.cshtml
@@ -30,7 +30,6 @@
     </div>
 </div>
 <hr />
-<hr />
 <div class="row">
     <div class="col-6">
         <p>social settings from controller</p>
@@ -41,5 +40,12 @@
         <p>social settings with injected IOption</p>
         <p>@socialLoginSettings.Value.FacebookLoginSettings.Key</p>
         <p>@socialLoginSettings.Value.GoogleLoginSettings.Key</p>
+    </div>
+</div>
+<hr />
+<div class="row">
+    <div class="col-6">
+        <p>Connection string</p>
+        <p>@ViewBag.ConnectionString</p>
     </div>
 </div>
